# qsim

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  05_qiskit_surface_code.ipynb  README.md  mkdocs.yml  pulse_drawer.py  pyproject.toml  required_tasks.txt  surface_3_final.txt  surface_3_stim.txt  timing_surface_code_3.ipynb  two_qubit.txt  workflow.agent.md
dev/: check_repo_text_rules.py  cleanup_test_artifacts.ps1  docs_update.config.example.json  pulse_gate_map_report.py  run_docs_update_workflow.ps1
docs/: README.md  WIKI.md  index.md
examples/: backend.yaml  bell.qasm  minimal_run.py  pulse_timing_visual_check.py  surface_3.qasm  surface_3_final.qasm  surface_3_optimized.qasm
issues/: ISSUE_DYN_P0_JULIA_ENGINE_PULSE_SCHEDULE_PARITY_AND_RENAME.md  ISSUE_QEC_P0_DECODER_MWPM_BP.md  ISSUE_QEC_P0_ROADMAP.md  ISSUE_QEC_P0_SCHEMA_AND_INTERFACES.md  ISSUE_QEC_P0_STIM_CIRQ_PRIOR.md  ISSUE_QEC_P1_DECODER_EVAL_AND_SWEEP.md  ISSUE_QEC_P1_REAL_JULIA_ENGINE_BRIDGE.md  ISSUE_QEC_P1_SENSITIVITY_AND_ERROR_BUDGET.md  ISSUE_QEC_P2_PAULI_PLUS_ERROR_BUDGET.md  ISSUE_QEC_P2_SCALE_AND_RELIABILITY.md  ISSUE_TEMPLATE.md  README.md
scripts/: codex_prompt_docs_update.md  julia_engine_bridge.jl
site/: 404.html  WIKI.html  index.html  objects.inv
task1_outputs/: task1_native_tri_compare_summary.csv  task1_p1_dynamics_long.csv  task1_single_qubit_baseline_visual_compare_summary.csv
tests/: test_circuit_adapter.py  test_julia_engines.py  test_model_build.py  test_pulse_catalog.py  test_pulse_visualize.py  test_qec_workflow.py  test_qutip_engine_general.py  (+9 more)
(+2212 files in other folders)
